--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
+
+
+
+
     <string name="app_name">ALC 4.0</string>
     <string name="welcome_message">Welcome to ALC 4.0</string>
     <string name="title_activity_about__alc_">About ALC</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_about__alc">About ALC</string>
+    <!--<string name="title_activity_about__alc">About ALC</string>-->
 
     <string name="display_divider">Divider</string>
     <string name="andela_logo">Andela Logo</string>
@@ -28,5 +31,17 @@
     <string name="track_label">Track:</string>
     <string name="user_title_name">John Doe</string>
     <string name="my_profile_btn_text">MY PROFILE</string>
-    <string name="about_alc_btn_text">ABOUT ALC</string>
+    <string name="about_alc_text">ABOUT ALC</string>
+    <string name="title_activity_main2">ALC4profile</string>
+
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+    <string name="title_activity_delete">Delete</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
 </resources>
